objects/Workplan_Task_Template__c.object
<CustomObject>
    <fields>
        <fullName>Acc_Team_Role_for_New_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acc Team Role for New Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Team_Role_for_Renewal_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acc Team Role for Renewal Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_SLA__c</fullName>
        <inlineHelpText>To be entered by user</inlineHelpText>
        <label>Expected SLA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIA Admin Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Object_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Day_Type__c</fullName>
        <description>Field to check whether to consider Actual days or business days for expected date</description>
        <label>SLA Day Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Process_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Process Type</label>
        <referenceTo>Sub_Process_Type__c</referenceTo>
        <relationshipLabel>Workplan Task Template</relationshipLabel>
        <relationshipName>Workplan_Task_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Completion_Events__c</fullName>
        <label>Task Completion Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Completion_Expression__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Completion Criteria Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Creation_Criteria_Expression__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Creation Criteria Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Creation_Events__c</fullName>
        <inlineHelpText>Auto-Updated by trigger on Workplan Task Rules object. This should not be changed manually.</inlineHelpText>
        <label>Task Creation Events</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Generation_Criteria_Expression__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Generation Criteria Expression</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Generation_Events__c</fullName>
        <label>Task Generation Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Owner_Type__c</fullName>
        <label>Task Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Team Role</fullName>
                </value>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
                <value>
                    <fullName>BRF Owner</fullName>
                </value>
                <value>
                    <fullName>Opportunity Owner</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>1.Manual:
Created by system	
Closed by user	
User will complete task on the work object and then close task on the workplan task

2.Manual / SF should auto close this task:
Created by system
Closed by system	
User will complete task on the work object

3.Optional	
Created by user	
Closed by user	
User will complete task on the work object and then close task on the workplan task

4.Automated recording of this event	
Created by system	
Closed by system	
It happens at the time trigger of the event ex. BRF sold date</description>
        <label>Task Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual / SF should auto close this task</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Automated recording of this event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <label>Used For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Post-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>AIA - Custom object used to store the description, type &amp; status of tasks to be created.  This object is a template repository of tasks for various business Rules.
This object will replace the old functionality.
This is implemented for Nov-2017 Release.</description>
    <label>Workplan Task Template</label>
    <nameField>
        <displayFormat>WP Task Template - {00000}</displayFormat>
        <label>Workplan Task Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Task Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AIA_Default_Queue_Workplan_Task_Template</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA Admin Queue</label>
        <queue>AIA_Default_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Acc_Team_Role_for_New_Business__c</columns>
        <columns>Acc_Team_Role_for_Renewal_Business__c</columns>
        <columns>Expected_SLA__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Master_SLA_Grid</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Expected_SLA__c</columns>
        <columns>SLA_Day_Type__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Master SLA Grid</label>
    </listViews>
    <validationRules>
        <fullName>EWPTT001</fullName>
        <active>true</active>
        <description>When Task Owner Type is QUEUE, Queue Name cannot be blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(TEXT(Task_Owner_Type__c)='QUEUE', ISBLANK(TEXT(Queue_Name__c ))))</errorConditionFormula>
        <errorDisplayField>Queue_Name__c</errorDisplayField>
        <errorMessage>EWPTT001: When Task Owner Type is QUEUE, Queue Name cannot be blank</errorMessage>
    </validationRules>
</CustomObject>